--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "font-awesome": "^4.7.0",
+    "html-to-draftjs": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
