--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "dateformat": "^4.5.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "font-awesome": "^4.7.0",
